--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                             <h2 class=" text-center text-2xl font-bold">Triangle</h2>
                             <p class="text-center text-sm font-medium">Area (A) = 0.5 x b x h</p>
                             <p class="mt-2">
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="Base">
+                                <input type="text" name="" id="triangle-base-input" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="Base">
                                 <span class="ml-3">cm</span>
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="Height">
+                                <input type="text" name="" id="triangle-height-input" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="Height">
                                 <span class="ml-3">cm</span>
                             </p>
-                            <p class="text-center text-xl my-2 ">Area: <span id="">00</span></p>
+                            <p class="text-center text-xl my-2 ">Area: <span id="result">00</span></p>
                             <div class="card-actions ">
-                                <button class="btn btn-primary w-full">Calculate</button>
+                                <button id="triangle-btn" class="btn btn-primary w-full">Calculate</button>
                             </div>
                         </div>
                     </div>
@@ -149,6 +149,8 @@
         </div>
     </main>
 
+    <!-- js link  -->
+    <script src="js/index.js"></script>
 </body>
 
 </html>
