update Dom monipolation using function

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 <input type="text" name="" id="triangle-height-input" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="Height">
                                 <span class="ml-3">cm</span>
                             </p>
-                            <p class="text-center text-xl my-2 ">Area: <span id="result">00</span></p>
+                            <p class="text-center text-xl my-2 ">Area: <span id="triangle-result">00</span></p>
                             <div class="card-actions ">
                                 <button id="triangle-btn" class="btn btn-primary w-full">Calculate</button>
                             </div>
@@ -57,14 +57,14 @@
                             <h2 class=" text-center text-2xl font-bold">Rectangle</h2>
                             <p class="text-center text-sm font-medium">Area (A) = w x I</p>
                             <p class="mt-2">
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="Base">
+                                <input type="text" name="" id="rectangle-width-input" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="Width">
                                 <span class="ml-3">cm</span>
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="Height">
+                                <input type="text" name="" id="rectangle-length-input" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="Length">
                                 <span class="ml-3">cm</span>
                             </p>
-                            <p class="text-center text-xl my-2 ">Area: <span id="">00</span></p>
+                            <p class="text-center text-xl my-2 ">Area: <span id="rectangle-result">00</span></p>
                             <div class="card-actions ">
-                                <button class="btn btn-primary w-full">Calculate</button>
+                                <button id="rectangle-btn" class="btn btn-primary w-full">Calculate</button>
                             </div>
                         </div>
                     </div>
@@ -75,14 +75,14 @@
                             <h2 class=" text-center text-2xl font-bold">Parallelogram</h2>
                             <p class="text-center text-sm font-medium">Area (A) = b x h</p>
                             <p class="mt-2">
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="Base">
+                                <input type="text" name="" id="parallelogram-base-input" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="Base">
                                 <span class="ml-3">cm</span>
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="Height">
+                                <input type="text" name="" id="parallelogram-height-input" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="Height">
                                 <span class="ml-3">cm</span>
                             </p>
-                            <p class="text-center text-xl my-2 ">Area: <span id="">00</span></p>
+                            <p class="text-center text-xl my-2 ">Area: <span id="parallelogram-result">00</span></p>
                             <div class="card-actions ">
-                                <button class="btn btn-primary w-full">Calculate</button>
+                                <button id="parallelogram-btn" class="btn btn-primary w-full">Calculate</button>
                             </div>
                         </div>
                     </div>
@@ -93,14 +93,14 @@
                             <h2 class=" text-center text-2xl font-bold">Rhombus</h2>
                             <p class="text-center text-sm font-medium">Area (A) = 0.5 x d<sub>1</sub> x d<sub>2</sub></p>
                             <p class="mt-2">
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="Base">
+                                <input type="text" name="" id="rhombus-d1-input" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="d1">
                                 <span class="ml-3">cm</span>
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="Height">
+                                <input type="text" name="" id="rhombus-d2-input" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="d2">
                                 <span class="ml-3">cm</span>
                             </p>
-                            <p class="text-center text-xl my-2 ">Area: <span id="">00</span></p>
+                            <p class="text-center text-xl my-2 ">Area: <span id="rhombus-result">00</span></p>
                             <div class="card-actions ">
-                                <button class="btn btn-primary w-full">Calculate</button>
+                                <button id="rhombus-btn" class="btn btn-primary w-full">Calculate</button>
                             </div>
                         </div>
                     </div>
@@ -111,14 +111,14 @@
                             <h2 class=" text-center text-2xl font-bold">Pentagon</h2>
                             <p class="text-center text-sm font-medium">Area (A) = 0.5 x p x b</p>
                             <p class="mt-2">
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="Base">
+                                <input type="text" name="" id="pentagon-p-input" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="p">
                                 <span class="ml-3">cm</span>
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="Height">
+                                <input type="text" name="" id="pentagon-b-input" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="b">
                                 <span class="ml-3">cm</span>
                             </p>
-                            <p class="text-center text-xl my-2 ">Area: <span id="">00</span></p>
+                            <p class="text-center text-xl my-2 ">Area: <span id="pentagon-result">00</span></p>
                             <div class="card-actions ">
-                                <button class="btn btn-primary w-full">Calculate</button>
+                                <button id="pentagon-btn" class="btn btn-primary w-full">Calculate</button>
                             </div>
                         </div>
                     </div>
@@ -129,14 +129,14 @@
                             <h2 class=" text-center text-2xl font-bold">Ellipse</h2>
                             <p class="text-center text-sm font-medium">Area (A) = π x ab</p>
                             <p class="mt-2">
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="Base">
+                                <input type="text" name="" id="ellipse-a-input" class="w-[80px] p-2 rounded-lg bg-[#F1F1F1]" placeholder="a">
                                 <span class="ml-3">cm</span>
-                                <input type="text" name="" id="" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="Height">
+                                <input type="text" name="" id="ellipse-b-input" class="w-[80px] p-2 rounded-lg ml-4 bg-[#F1F1F1]" placeholder="b">
                                 <span class="ml-3">cm</span>
                             </p>
-                            <p class="text-center text-xl my-2 ">Area: <span id="">00</span></p>
+                            <p class="text-center text-xl my-2 ">Area: <span id="ellipse-result">00</span></p>
                             <div class="card-actions ">
-                                <button class="btn btn-primary w-full">Calculate</button>
+                                <button id="ellipse-btn" class="btn btn-primary w-full">Calculate</button>
                             </div>
                         </div>
                     </div>
