--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- header End  -->
 
     <main>
-        <div class="flex container px-10">
+        <div class="flex container px-10 mx-auto">
             <div class="flex-1">
                 <div class="grid grid-cols-3 gap-6">
                     <!-- Triangle box -->
@@ -145,6 +145,11 @@
 
             <div class="w-[400px]">
                 <h5 class="underline text-center text-xl">Area Calculation</h5>
+                <div class="ml-5 mt-5">
+                    <ol class="ml-10 text-2xl" id="calculated-history">
+
+                    </ol>
+                </div>
             </div>
         </div>
     </main>
